--- a/application-manager/src/app/application-manager/application-list/application-list.component.css
+++ b/application-manager/src/app/application-manager/application-list/application-list.component.css
@@ -1,3 +1,14 @@
+.application-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.addApplication {
+  margin: 10px;
+  padding: 5px;
+}
+
 table {
   border-collapse: collapse;
 }
